data/derived/comb/progs/unify/prog1010.ml.out
Characters 13-16:
  let _ = log (1.5-1.0);;
               ^^^
Error: This expression has type float but an expression was expected of type
         int
